--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -6,14 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".ui.DetailUserActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:title="Detail User"
+            app:menu="@menu/top_bar_menu_detail"
+            app:navigationIcon="@drawable/ic_arrow_back"
+            android:paddingVertical="4dp"
+            android:paddingEnd="12dp"
+            android:paddingStart="8dp"
+            style="@style/Theme.GitHubUser.ToolBar" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <ImageView
         android:id="@+id/img_profile"
         android:layout_width="125dp"
         android:layout_height="125dp"
         tools:src="@mipmap/ic_launcher"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
         app:layout_constraintStart_toStartOf="parent"
         android:contentDescription="@string/image_profile_description" />
 
@@ -108,6 +130,18 @@
         app:layout_constraintStart_toStartOf="@id/tv_repo_title"
         app:layout_constraintEnd_toEndOf="@id/tv_repo_title"
         app:layout_constraintBottom_toBottomOf="@id/img_profile" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        android:foregroundGravity="bottom"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_favorite_border"
+        android:contentDescription="@string/fab_icon_description" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
