--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,4 +7,12 @@
         <item name="android:statusBarColor">@color/black</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="Theme.GitHubUser.ToolBar" parent="@style/Widget.MaterialComponents.Toolbar.Primary">
+        <item name="iconTint">@color/white</item>
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="subtitleTextColor">@color/white</item>
+        <item name="navigationIconTint">@color/white</item>
+    </style>
 </resources>
