--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,5 +8,13 @@
         <item name="android:statusBarColor">@color/white</item>
     </style>
 
+    <style name="Theme.GitHubUser.ToolBar" parent="@style/Widget.MaterialComponents.Toolbar.Primary">
+        <item name="iconTint">@color/black</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="titleTextColor">@color/black</item>
+        <item name="subtitleTextColor">@color/black</item>
+        <item name="navigationIconTint">@color/black</item>
+    </style>
+
     <style name="Theme.GitHubUser" parent="Base.Theme.GitHubUser" />
 </resources>
