--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
         <item name="android:statusBarColor">@color/white</item>
     </style>
 
-    <style name="Theme.GitHubUser.ToolBar" parent="@style/Widget.MaterialComponents.Toolbar.Primary">
+    <style name="Theme.GitHubUser.ToolBar" parent="@style/Widget.Material3.Toolbar">
         <item name="iconTint">@color/black</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="titleTextColor">@color/black</item>
