--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -6,6 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.SettingActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:title="Setting"
+            app:navigationIcon="@drawable/ic_arrow_back"
+            android:paddingEnd="8dp"
+            android:paddingStart="1dp"
+            style="@style/Theme.GitHubUser.ToolBar" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switch_theme"
         android:layout_width="wrap_content"
